--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       - RELEASE_ID=${RELEASE_ID_BLUE}
       - PORT=${PORT}
+      - APP_POOL=blue
     ports:
       - "8081:${PORT}"
     healthcheck:
@@ -21,6 +22,7 @@ services:
     environment:
       - RELEASE_ID=${RELEASE_ID_GREEN}
       - PORT=${PORT}
+      - APP_POOL=green
     ports:
       - "8082:${PORT}"
     healthcheck:
@@ -45,3 +47,50 @@ services:
       - NGINX_ENVSUBST_OUTPUT_DIR=/etc/nginx
     command: >
       /bin/sh -c "envsubst '$$ACTIVE_POOL' < /etc/nginx/templates/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
+
+# version: "3.9"
+
+# services:
+#   app_blue:
+#     image: ${BLUE_IMAGE}
+#     container_name: app_blue
+#     environment:
+#       - RELEASE_ID=${RELEASE_ID_BLUE}
+#       - PORT=${PORT}
+#       - APP_POOL=blue        # ✅ Add this
+#     ports:
+#       - "8081:${PORT}"
+#     healthcheck:
+#       test: ["CMD", "curl", "-f", "http://localhost:${PORT}/healthz"]
+#       interval: 5s
+#       timeout: 2s
+#       retries: 3
+
+#   app_green:
+#     image: ${GREEN_IMAGE}
+#     container_name: app_green
+#     environment:
+#       - RELEASE_ID=${RELEASE_ID_GREEN}
+#       - PORT=${PORT}
+#       - APP_POOL=green       # ✅ Add this
+#     ports:
+#       - "8082:${PORT}"
+#     healthcheck:
+#       test: ["CMD", "curl", "-f", "http://localhost:${PORT}/healthz"]
+#       interval: 5s
+#       timeout: 2s
+#       retries: 3
+
+#   nginx:
+#     image: nginx:stable-alpine
+#     container_name: nginx_gateway
+#     depends_on:
+#       - app_blue
+#       - app_green
+#     ports:
+#       - "8080:80"
+#     volumes:
+#       - ./nginx.conf.template:/etc/nginx/templates/nginx.conf.template
+#     environment:
+#       - ACTIVE_POOL=${ACTIVE_POOL}
+#       - NGINX_ENVSUBST_TEMPLATE_SUFFIX=.template
